# market-sim

./: .clang-format  .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build-valgrind.sh  build.sh  claude.md  config.json  config_template.json  notify.sh  pyproject.toml  run_all.sh
docs/: usage.md
docs/usage_guides/: experiments.md
include/agents/: informed_trader.hpp  market_maker.hpp  noise_trader.hpp  tracked_order.hpp
include/config/: config_loader.hpp  configs.hpp
include/exchange/: matching_engine.hpp  types.hpp
include/persistence/: csv_writer.hpp  data_collector.hpp  db_writer.hpp  metadata_writer.hpp  records.hpp  writer_config.hpp
include/simulation/: agent.hpp  events.hpp  fair_price.hpp  pnl.hpp  scheduler.hpp  simulation_engine.hpp
include/testing/: state_exporter.hpp  test_harness.hpp
include/time/: simulation_timer.hpp
include/utils/: types.hpp
src/: main.cpp
src/exchange/: matching_engine.cpp
src/testing/: state_exporter.cpp  test_harness.cpp
src/time/: simulation_timer.cpp
tests/: adverse_selection_scenario_tests.cpp  config_loader_tests.cpp  cross_validation_tests.cpp  fair_price_tests.cpp  informed_trader_tests.cpp  market_maker_tests.cpp  matching_engine_tests.cpp  noise_trader_tests.cpp  persistence_tests.cpp  pnl_tests.cpp  scheduler_tests.cpp  simulation_engine_tests.cpp  strong_type_tests.cpp  test_adverse_selection.py  test_visualize_book.py
tests/python/: conftest.py  test_cross_validation.py  test_harness.py
tools/: analyze_adverse_selection.py  test_visualize_book.py  visualize_book.py  visualize_timeseries.py
tools/dashboards/: gm_results.py  order_book_replay.py
tools/db/: archiver.py  import_csv.py  reader.py  schema.sql
tools/experiments/: __init__.py  analysis.py  config_builder.py  gm_replication.py  gm_replication_v2.py  runner.py  sweep.py
tools/testing/: __init__.py  cross_validator.py  harness.py  pnl_tracker.py  state_comparator.py
tools/visualizer/: order_book.py
